--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <script src="app.js" defer></script>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 
     <!-- Note that the below Bootstrap file is a specific version. If you grab the most
     current from Bootstrap website, you will see the button grow transition being a lot faster
@@ -22,7 +26,7 @@
     <div class="container d-flex align-items-center justify-content-center h-100">
       <div class="row">
         <header class="text-center">
-          <h1>The Startup</h1>
+          <h1 class="animate__animated animate__bounceInLeft">The Startup</h1>
         </header>
         <div class="buffer col-12"></div>
         <section class="text-center col-12">
